Added GUI styles: BeOS, Bloody, Grass, Ocean, Sunny, Panther, Sky
Added Fuzix ide image on the zesarux-extras package
Added ZSF snapshot support for Jupiter Ace, Z88
Added --slotcard-num setting to insert a Z88 card in a numbered slot (1, 2 or 3)
Added ZRCP command mmc-reload to reload MMC image
Added speech scripts to realtime translation from one language to another of a text adventure game


Improved Find menu: now can find several bytes and open Hexadecimal Editor on the results list
Improved Audio to .mid exporter: allow changing instrument
Improved Text Aventure Features: 
-Improved detection of Daad aventures on debugging
-Now you can render any image from a Speccy Text Adventure (supported parsers: Quill, Paws, Daad, Gac)
-Now you can use a text speech script which can translate text from the game and show the translated text on ZEsarUX window

Improved Next emulation:
-Turbo setting: make it by default limited on NextZXOS
-ZSF snapshots include all info from port 123b (previous TBBlue .zsf snapshots are incompatible with this version, sorry!)
-Added a splash message when changing Layer 2 modes

Improved Debugging: 
-Mouse accions: click (toggle breakpoint, change registers), scrolling up/down by using the mouse wheel
-Can now browse Basic variables on ZX Spectrum, ZX81 and ZX80
-Added Window View Sensors to graph internal emulation sensors, performance, statistics, etc
-Allow to define up to 100 breakpoints from menu
-Preserve step mode when assembling
-Added command line setting to load source code

Improved ZX Vision menu interface:
-Added setting to pause cpu emulation on menu when multitask active
-Added Degraded ZX Desktop Fill Type
-Added button on footer to switch ZX Desktop
-Added Accessibility->GUI settings as a quick way to enable some GUI enhancements: high contrast style, hotkeys, etc
-Show in file selector when a file can be expanded
-Improved screen file previews: any file size of 6912 bytes is guessed as Spectrum screen